translatable/tests/static/invalid_args.stderr
error: expected `,`
 --> tests/static/invalid_args.rs:5:5
  |
5 |     translation!("es");
  |     ^^^^^^^^^^^^^^^^^^
  |
  = note: this error originates in the macro `translation` (in Nightly builds, run with -Z macro-backtrace for more info)

error: expected identifier
 --> tests/static/invalid_args.rs:8:32
  |
8 |     translation!("es", "path", 42 = "value");
  |                                ^^
